implement Serializable interface for response and request DTOs, add JSON date formatting, and enhance caching in service methods